<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toppings">

    <TextView
        android:id="@+id/headertv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mysticRed"
        android:text="@string/pizzatopping"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="474dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzasize1"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="129dp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzasize2"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="204dp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzasize3"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="287dp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzasize4"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="355dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>