<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <TextView
        android:id="@+id/headertv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mysticRed"
        android:text="@string/compName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:background="@color/mysticRed"
        android:paddingBottom="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/amber"
        android:text="@string/menu"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="41dp" />

    <Button
        android:id="@+id/btn_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/amber"
        android:text="@string/coupon"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="41dp" />

    <Button
        android:id="@+id/btn_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/amber"
        android:text="@string/cart"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="117dp" />

    <Button
        android:id="@+id/btn_checkOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="432dp" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="168dp"
        android:layout_height="153dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="249dp" />

</android.support.constraint.ConstraintLayout>