<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerInfo">

    <android.support.constraint.ConstraintLayout
        android:layout_width="385dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/headertv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mysticRed"
            android:text="@string/cusInfo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="387dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/cusFirstName"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cusLastName" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/cusLastName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/cusAddress"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/cusAddress2"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/cuspostal"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>